ci-cd-pipeline/docker-registry/docker-registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-registry-svc
  name: my-registry-svc
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: my-registry
  type: ClusterIP
